syntax = "proto3";

package com.test.rscoket.rpc;

import "google/protobuf/empty.proto";

option java_package = "com.test.rsocket.rpc";
option java_outer_classname = "SimpleServiceProto";
option java_multiple_files = true;

service SimpleService {
  rpc RequestReply (SimpleRequest) returns (SimpleResponse) {}

  rpc FireAndForget (SimpleRequest) returns (google.protobuf.Empty) {}

  rpc RequestStream (SimpleRequest) returns (stream SimpleResponse) {}

  rpc StreamingRequestSingleResponse (stream SimpleRequest) returns (SimpleResponse) {}

  rpc StreamingRequestAndResponse (stream SimpleRequest) returns (stream SimpleResponse) {}
}

message SimpleRequest {
  string requestMessage = 1;
}

message SimpleResponse {
  string responseMessage = 1;
}
